# advent-of-code

./: .gitignore  CLAUDE.md  readme.md
2015/gleamm/: gleam.toml  manifest.toml
2015/ruby/: Gemfile  day19.rb  day21.rb  day22.rb
2016/aoc/: gleam.toml  manifest.toml
2017/: build.zig  build.zig.zon
2017/src/: day01.zig  day02.zig  main.zig  utils.zig
2018/: CLAUDE.md  Package.swift
2019/: CLAUDE.md
2019/python/: day01.py
2020/: CLAUDE.md  readme.md
2020/rust/: CLAUDE.md  Cargo.toml
2021/: readme.md
2022/: day1.fnl  utils.fnl
2022/fennel/: day1.fnl  hello.fnl  utils.fnl
2022/fp-ts/: index.ts  package-lock.json  package.json  utils.ts
2022/ruby/: Gemfile  utils.rb
2023/: .rubocop.yml  Gemfile  README.md  bun.lockb  day01.ml  day02.bb  day02.rb  day03.rb  day04.rb  day05.rb  day06.rb  day07.rb  day08.rb  day09.rb  day10.rb  day11.rb  day12.bb  day12.ts  package.json
2023/babashka/: day01.bb
2024/: Gemfile  day01.rb  day02.rb
2024/aoc/: gleam.toml  manifest.toml
2025/aoc25/: gleam.toml  manifest.toml
2025/aoc_rust/: Cargo.toml
2025/clojure/: day09.clj
day06/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day1/: Cargo.toml
day1/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day2/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/src/: main.rs
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/src/: main.rs
python/day01/: pyvenv.cfg  utils.py
rust/day07/: Cargo.toml
rust/day10/: Cargo.toml
rust/day12/: Cargo.toml
(+77 files in other folders)
