[package]
name = "aoc2025"
version = "0.1.0"
authors = ["Waldemar <waldemar.schwan@uswitch.com>"]
edition = "2021"

[dependencies]

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day06"
path = "src/bin/day06.rs"
